tests/snapshots/files__select_simple-optimize-sequential.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 20 30
@main(v0: int, v1: int) {
.b2_:
  v3_: int = mul v0 v1;
  c4_: int = const 20;
  v5_: bool = lt v3_ c4_;
  v6_: int = id v1;
  br v5_ .b7_ .b8_;
.b7_:
  v6_: int = id v0;
  print v6_;
  ret;
  jmp .b9_;
.b8_:
  print v6_;
  ret;
.b9_:
}
