tests/snapshots/files__simple-call-optimize-no-ctx.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 
@inc(v0: int): int {
  c1_: int = const 1;
  v2_: int = add c1_ v0;
  ret v2_;
}
@main {
  c0_: int = const 1;
  print c0_;
  ret;
}
