tests/snapshots/files__simple-call-optimize-sequential.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 
@inc(v0: int): int {
.b1_:
  c2_: int = const 1;
  v3_: int = add c2_ v0;
  ret v3_;
}
@main {
.b0_:
  c1_: int = const 1;
  print c1_;
  ret;
}
