tests/snapshots/files__simple-call-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
@inc(v0: int): int {
  v2: int = const 1;
  v5: int = add v2 v0;
  ret v5;
}
@main {
  v1: int = const 1;
  print v1;
}
