tests/snapshots/files__simple-call-structured.snap
---
source: tests/files.rs
expression: visualization.result
---
inc {
one: int = const 1;
res: int = add one x;
return res
}

main {
a: int = const 0;
c: int = call @inc a;
print c;
return
}
