tests/snapshots/files__simple_branch-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
@main(v0: int) {
.v1_:
  v2_: int = const 0;
  v3_: bool = lt v0 v2_;
  v4_: int = const 0;
  v5_: int = id v4_;
  br v3_ .v6_ .v7_;
.v6_:
  v8_: int = const 1;
  v5_: int = id v8_;
.v7_:
  print v5_;
}
