tests/snapshots/files__simple_branch-peg.snap
---
source: tests/files.rs
expression: visualization.result
---
digraph G {
subgraph {
node [ordering=out];
v0 [label="arg 0"];
v1 [label="int"];
v2 [label="lt"];
v3 [label="arg 1"];
v4 [label="arg 1"];
v5 [label="int"];
v6 [label="int"];
v7 [label="Φ"];
v8 [label="Φ"];
v9 [label="PRINT"];
v2 -> v0;
v2 -> v1;
v7 -> v2;
v7 -> v3;
v7 -> v4;
v8 -> v2;
v8 -> v5;
v8 -> v6;
v9 -> v8;
v9 -> v7;
}
}

