tests/snapshots/files__simple_branch-structured.snap
---
source: tests/files.rs
expression: visualization.result
---
main {
block:
 block:
  block:
   zero: int = const 0;
   isless: bool = lt arg zero;
   if isless:
    break 2
   else:

  result: int = const 0;
  break 2
 result: int = const 1;
block:
 print result;
 return

}
